# fannkuchen

./: Cargo.toml  README.md
benches/: adtuning.rs  blocksize.rs  showdown.rs
examples/: log_adaptive.rs
src/: fannkuchh_adaptive.rs  fannkuchh_original.rs  fannkuchh_rayon.rs  fannkuchh_sequential.rs  lib.rs  main.rs
