[package]
name = "fannkuchen"
version = "0.1.0"
authors = ["smr97 <saurabh.mraje@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon="*"
rayon_try_fold = {git = "https://github.com/wagnerf42/rayon_try_fold.git"}
