[package]
name = "fannkuchen"
version = "0.1.0"
authors = ["smr97 <saurabh.mraje@gmail.com>"]
edition = "2018"

#[profile.release]
#lto = "fat"
#codegen-units = 1
#panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
logs = ["rayon_logs", "kvik/logs"]

[dependencies]
rayon="*"
kvik = {git="https://github.com/wagnerf42/kvik"}
rayon_logs={optional=true, git="https://github.com/wagnerf42/rayon-logs"}

[[bench]]
name="showdown"
harness=false

[dev_dependencies]
criterion = "*"
itertools = "*"
